# memonsters

./: CMakeLists.txt  Memonsters.h  MemonstersComunes.txt  MemonstersEpicos.txt  MemonstersLegendarios.txt  MemonstersRaros.txt  README.md  main.cpp
auxiliary/: LinkedList.h  Node.h
classes/: player.cpp  player.h
docs/: especificacion.md
